gcc/ 	PR rtl-optimization/34415 	* df.h (DF_LR_IN, DF_LR_OUT): Update comments. 	* resource.c (mark_target_live_regs): Use DF_LR_IN rather than 	df_get_live_in.  Don't handle pseudos.

gcc/testsuite/
	PR rtl-optimization/34415
	* gcc.c-torture/execute/pr34415.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@130987 138bc75d-0d04-0410-961f-82ee72b054a4